syntax = "proto3";

package logic;

option go_package = "src/im/api/logic;logic";

message Proto {
    int32 ver = 1;
    int32 op = 2;
    int32 seq = 3;
    bytes body = 4;
}

message PushMsg {
    enum Type {
        PUSH = 0;
        ROOM = 1;
        BROADCAST = 2;
    }
    Type type = 1;
    int32 operation = 2;
    int32 speed = 3;
    string server = 4;
    string room = 5;
    repeated string keys = 6;
    bytes msg = 7;
}

message ReceiveReq {
    int64 userID = 1;
    Proto proto = 2;
}

message ReceiveReply {
}

service Logic {
    // Receive
    rpc Receive(ReceiveReq) returns (ReceiveReply);
}